--- a/config/database.yml
+++ b/config/database.yml
@@ -15,8 +15,9 @@ test:
   pool: 5
   timeout: 5000
 
-production:
-  adapter: sqlite3
-  database: db/production.sqlite3
-  pool: 5
-  timeout: 5000
+  production:
+   adapter: mysql
+   host: localhost
+   username: <%= ENV['mysql_username'] %>
+   password: <%= ENV['mysql_password'] %>
+   database: <%= ENV['mysql_database'] %>
